--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -81,7 +81,7 @@
         <div *ngFor="let pool of otherPools; let i = index" [attr.data-index]="i">
           <h6 *ngIf="!getPool(i - 1) || getPool(i - 1).algorithm !== pool.algorithm" class="dropdown-header">{{pool.algorithm}}</h6>
           <a ngbDropdownItem href="{{pool.url}}" target="_blank">{{pool.name}}</a>
-          <div *ngIf="getPool(i + 1) && (getPool(i + 1).algorithm !== pool.algorithm || getPool(i + 1).group !== pool.group)" class="dropdown-divider"></div>
+          <div *ngIf="getPool(i + 1) && getPool(i + 1).algorithm !== pool.algorithm" class="dropdown-divider"></div>
         </div>
       </div>
     </div>
