--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -47,7 +47,7 @@
     <td class="ellipsis">{{block.winner.name || block.winner.payoutAddress || snippetService.getSnippet('general.unknown')}}</td>
     <td>{{block.reward}} {{poolConfig.ticker}}</td>
     <td [style.padding-top]="block.distributed ? '12px' : '2px'" [style.padding-bottom]="block.distributed ? '12px' : '8px'">
-      {{block.distributed ? snippetService.getSnippet('blocks-won-component.distributed') : snippetService.getSnippet('blocks-won-component.pending')}}
+      {{getBlockDistributedLabel(block)}}
       <span *ngIf="!block.distributed">({{getBlockConfirms(block)}} / {{poolConfig.blockRewardDistributionDelay}})</span>
       <ngb-progressbar *ngIf="!block.distributed" [striped]="true" [animated]="true" [type]="getBlockProgressType(block)" [value]="getBlockProgress(block)"></ngb-progressbar>
     </td>
