Use ticker for extra reward events as well

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -24,7 +24,7 @@
                 {{snippetService.getSnippet('events-component.ended-at')}}: {{getFormattedDate(event.endedAt)}}
               </li>
               <li>
-                {{snippetService.getSnippet('events-component.extra-reward')}}: {{event.payload.extraReward}} {{coin}}
+                {{snippetService.getSnippet('events-component.extra-reward')}}: {{event.payload.extraReward}} {{ticker}}
               </li>
               <li>
                 <span style="display: inline-table">
