--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -64,16 +64,16 @@
           </button>
         </a>
       </li>
-      <li class="nav-item" *ngIf="poolConfig.supportsMessageVerification">
-        <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary" routerLink="/settings" routerLinkActive="active" (click)="onTabButtonClick()">
-            {{snippetService.getSnippet('header-component.button.settings')}}
-          </button>
-        </a>
-      </li>
     </ul>
-    <button *ngIf="accountService.havePoolPublicKey" class="btn btn-secondary" style="margin-right: 0.5rem;" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
-    <div ngbDropdown class="d-inline-block" *ngIf="otherPools.length > 0">
+    <div class="currency-select-wrapper header-row-item-start" *ngIf="ratesService.currencies && ratesService.currencies.length > 0">
+      <select class="custom-select currency-select" [(ngModel)]="ratesService.selectedCurrency">
+        <option *ngFor="let currency of ratesService.currencies" [ngValue]="currency" class="currency-select-option">{{ currency.toUpperCase() }}</option>
+      </select>
+    </div>
+    <div class="header-row-item">
+      <button *ngIf="accountService.havePoolPublicKey" class="btn btn-secondary" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
+    </div>
+    <div ngbDropdown class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
       <button class="btn btn-outline-primary" id="poolsDropdown" ngbDropdownToggle>
         {{snippetService.getSnippet('header-component.button.other-pools')}}
       </button>
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div ngbDropdown class="d-inline-block" style="margin-left: 10px">
+    <div ngbDropdown class="d-inline-block header-row-item-end">
       <button class="btn btn-outline-primary" id="languageDropdown" ngbDropdownToggle>
         {{snippetService.getSelectedLanguage()}}
       </button>
