--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -175,6 +175,12 @@
           </div>
         </div>
       </div>
+      <div class="p-1 col-md-12">
+        <div echarts [options]="ecChartOptions" [merge]="ecChartUpdateOptions" theme="default" class="ec-chart"></div>
+      </div>
+      <div class="p-1 col-md-12">
+        <div echarts [options]="sharesChartOptions" [merge]="sharesChartUpdateOptions" theme="default" class="shares-chart"></div>
+      </div>
     </div>
   </div>
 </div>
