--- a/src/app/stats-card/stats-card.component.html
+++ b/src/app/stats-card/stats-card.component.html
@@ -1,53 +1,85 @@
 <div class="row">
-  <div class="col-md-6 col-lg-6 col-xxl-12">
+  <div class="col-sm-6 col-md-3 col-lg-6 col-xxl-7 small-col-padding">
     <div class="card">
-      <div class="card-header">
-        {{snippetService.getSnippet('stats-card-component.height-card.title')}}
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.height-card.current-effort')}}
       </div>
-      <div class="card-body card-body-two-lines">
-        <span class="card-text">
-          {{snippetService.getSnippet('stats-card-component.height-card.current-effort')}}: <span [class]="getEffortColor(currentEffort)">{{currentEffortFormatted}}</span><br>
-          {{snippetService.getSnippet('stats-card-component.height-card.height')}}: {{poolStats.height ? poolStats.height : snippetService.getSnippet('general.not-available.short')}}
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          <span [class]="getEffortColor(currentEffort)">{{currentEffortFormatted}}</span>
         </span>
       </div>
     </div>
   </div>
-  <div class="col-md-6 col-lg-6 col-xxl-12">
+  <div class="col-sm-6 col-md-3 col-lg-6 col-xxl-7 small-col-padding">
     <div class="card">
-      <div class="card-header">
-        {{snippetService.getSnippet('stats-card-component.reward-card.title')}}
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.reward-card.average-effort')}}
       </div>
-      <div class="card-body card-body-two-lines">
-            <span class="card-text">
-              {{snippetService.getSnippet('stats-card-component.reward-card.average-effort')}}: <span [class]="getEffortColor(averageEffort)">{{averageEffortFormatted}}</span><br>
-              {{snippetService.getSnippet('stats-card-component.reward-card.daily-reward')}}: <span placement="bottom" ngbTooltip="{{ratesService.getValuesInFiatFormatted(dailyRewardPerPiB)}} / PiB">{{dailyRewardPerPiB}} {{poolConfig.ticker}} / PiB</span>
-            </span>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          <span [class]="getEffortColor(averageEffort)">{{averageEffortFormatted}}</span>
+        </span>
       </div>
     </div>
   </div>
-  <div class="col-md-6 col-lg-6 col-xxl-12">
+  <div class="col-sm-12 col-md-6 col-lg-6 col-xxl-10 small-col-padding">
     <div class="card">
-      <div class="card-header">
-        {{snippetService.getSnippet('stats-card-component.farmers-card.title')}}
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.reward-card.daily-reward')}}
       </div>
-      <div class="card-body card-body-two-lines">
-            <span class="card-text">
-              {{snippetService.getSnippet('stats-card-component.farmers-card.farmers')}}: {{accountStats.accountsWithShares}}<br>
-              {{snippetService.getSnippet('stats-card-component.farmers-card.pool-ec')}}: {{getFormattedCapacityFromGiB(accountStats.ecSum || 0)}}
-            </span>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          <span placement="bottom" ngbTooltip="{{ratesService.getValuesInFiatFormatted(dailyRewardPerPiB)}} / PiB">{{dailyRewardPerPiBFormatted}} {{poolConfig.ticker}} / PiB</span>
+        </span>
       </div>
     </div>
   </div>
-  <div class="col-md-6 col-lg-6 col-xxl-12">
+  <div class="col-sm-6 col-md-2 col-lg-3 col-xxl-5 small-col-padding order-lg-1 order-xxl-0">
     <div class="card">
-      <div class="card-header">
-        {{snippetService.getSnippet('stats-card-component.network-capacity-card.title')}}
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.farmers-card.farmers')}}
       </div>
-      <div class="card-body card-body-two-lines">
-            <span class="card-text">
-              {{snippetService.getSnippet('stats-card-component.network-capacity-card.network-capacity')}}: {{getFormattedCapacityFromTiB(poolStats.networkSpaceInTiB)}}<br>
-              {{snippetService.getSnippet('stats-card-component.network-capacity-card.network-difficulty')}}: {{poolStats.difficulty}}
-            </span>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          {{accountStats.accountsWithShares}}
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3 col-lg-6 col-xxl-6 small-col-padding order-lg-0 order-xxl-1">
+    <div class="card">
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.farmers-card.pool-ec')}}
+      </div>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          {{getFormattedCapacityFromGiB(accountStats.ecSum || 0)}}
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3 col-lg-3 col-xxl-6 small-col-padding order-lg-2">
+    <div class="card">
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.height-card.height')}}
+      </div>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          {{poolStats.height ? poolStats.height : snippetService.getSnippet('general.not-available.short')}}
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4 col-lg-6 col-xxl-7 small-col-padding order-lg-3">
+    <div class="card">
+      <div class="card-header card-text-medium card-header-large">
+        {{snippetService.getSnippet('stats-card-component.network-capacity-card.network-capacity')}}
+      </div>
+      <div class="card-body card-body-large">
+        <span class="card-text card-text-large">
+          {{getFormattedCapacityFromTiB(networkSpaceInTiB)}}
+        </span>
       </div>
     </div>
   </div>
