--- a/src/app/my-farmer/my-farmer.component.scss
+++ b/src/app/my-farmer/my-farmer.component.scss
@@ -23,3 +23,13 @@
 .shares-chart {
   height: 15rem;
 }
+.header-info-icon {
+  font-size: 1.1rem;
+  margin-top: -44px;
+  margin-right: -14px;
+  float: right;
+  color: rgba(255, 255, 255, 0.4);
+}
+.header-info-icon:hover{
+  color: rgba(255, 255, 255, 0.9);
+}
