--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -69,10 +69,20 @@
       <button class="btn btn-secondary" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
     </div>
     <div class="currency-select-wrapper header-row-item" *ngIf="ratesService.currencies && ratesService.currencies.length > 0">
-      <select class="custom-select currency-select" [(ngModel)]="ratesService.selectedCurrency">
+      <select class="custom-select currency-select dark-background-input" [(ngModel)]="ratesService.selectedCurrency">
         <option *ngFor="let currency of ratesService.currencies" [ngValue]="currency" class="currency-select-option">{{ currency.toUpperCase() }}</option>
       </select>
     </div>
+    <form class="form-inline header-row-item">
+      <input
+        class="form-control mr-sm-2 dark-background-input"
+        type="search"
+        [(ngModel)]="accountSearchInput"
+        [ngModelOptions]="{standalone: true}"
+        [placeholder]="snippetService.getSnippet('header-component.search.placeholder')"
+        aria-label="Search">
+      <button class="btn btn-outline-success" (click)="search()">{{snippetService.getSnippet('header-component.search.title')}}</button>
+    </form>
     <div ngbDropdown class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
       <button class="btn btn-outline-primary" id="poolsDropdown" ngbDropdownToggle>
         {{snippetService.getSnippet('header-component.button.other-pools')}}
