--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -63,8 +63,24 @@
 .currency-select-option {
   background-color: #262629;
 }
-.dark-background-input {
+.dark-background {
   background-color: #262629;
   color: #cfd0d1;
   border-color: #6c757d;
+}
+.logout-button:hover{
+  color:#fff;
+  background-color:#dc3545;
+  border-color:#dc3545
+}
+.other-pools-button:hover{
+  color:#212529;
+  background-color:#f8f9fa;
+  border-color:#f8f9fa
+}
+.search-button{
+  cursor: pointer;
+}
+.search-input {
+  max-width: 16em;
 }
