--- a/src/app/farmer-payout-history/farmer-payout-history.component.html
+++ b/src/app/farmer-payout-history/farmer-payout-history.component.html
@@ -14,6 +14,7 @@
           </th>
           <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
           <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
+          <th scope="col">{{snippetService.getSnippet('payouts-component.headers.fiat-amount')}}</th>
           <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
         </tr>
       </thead>
@@ -35,6 +36,7 @@
             <span *ngIf="!poolConfig.blockExplorerCoinUrlTemplate">{{payout.coinId}}</span>
           </td>
           <td>{{payout.amount}} {{poolConfig.ticker}}</td>
+          <td>{{payout.fiatAmountFormatted}}</td>
           <td>{{getPaymentState(payout.state)}}</td>
         </tr>
       </tbody>
