--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,56 +10,56 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.dashboard')}}
           </button>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/my-farmer" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/my-farmer" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.my-farmer')}}
           </button>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/blocks-won" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/blocks-won" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.blocks-won')}}
           </button>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/payouts" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/payouts" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.payouts')}}
           </button>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/info" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/info" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.info')}}
           </button>
         </a>
       </li>
       <li class="nav-item" *ngIf="poolConfig.supportsFaucet">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/faucet" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/faucet" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.faucet')}}
           </button>
         </a>
       </li>
       <li class="nav-item" *ngIf="poolConfig.notices && poolConfig.notices.length > 0">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/notices" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/notices" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.notices')}}
           </button>
         </a>
       </li>
       <li class="nav-item" *ngIf="poolStats.events && poolStats.events.length > 0">
         <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary non-breaking" routerLink="/events" routerLinkActive="active" (click)="onTabButtonClick()">
+          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/events" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.events')}}
           </button>
         </a>
