--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -1,7 +1,7 @@
 <div style="display: flex;flex-direction: row;justify-content: space-between;">
   <h5>{{snippetService.getSnippet('top-accounts-component.title')}}</h5>
 </div>
-<table class="table table-dark dark-theme">
+<table class="table table-responsive-sm table-dark dark-theme">
   <thead>
   <tr>
     <th scope="col">{{snippetService.getSnippet('top-accounts-component.headers.address')}}</th>
@@ -30,8 +30,8 @@
     </tr>
   <tr *ngFor="let account of topAccounts; trackBy: trackBy">
     <td class="ellipsis">{{account.name ? account.name : account.payoutAddress}}</td>
-    <td>{{account.pendingRounded}}<span *ngIf="account.pendingRounded === 0 && account.collateral"><small> +{{account.collateralRounded}}</small></span> {{poolConfig.ticker}}</td>
-    <td>{{getFormattedCapacity(account.ec)}} <small>({{getEcShare(account)}} %)</small></td>
+    <td class="no-wrap">{{account.pendingRounded}}<span *ngIf="account.pendingRounded === 0 && account.collateral"><small> +{{account.collateralRounded}}</small></span> {{poolConfig.ticker}}</td>
+    <td class="no-wrap">{{getFormattedCapacity(account.ec)}} <small>({{getEcShare(account)}} %)</small></td>
   </tr>
   </tbody>
 </table>
