--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -11,7 +11,7 @@
       </span>
     </th>
     <th scope="col">
-      <span ngbTooltip="{{snippetService.getSnippet('general.ec')}}">
+      <span ngbTooltip="{{snippetService.getSnippet('general.avg-ec')}}">
         EC
       </span>
     </th>
@@ -30,8 +30,8 @@
     </tr>
   <tr *ngFor="let account of topAccounts; trackBy: trackBy">
     <td class="ellipsis">{{account.name ? account.name : account.payoutAddress}}</td>
-    <td class="no-wrap">{{account.pendingRounded}}<span *ngIf="account.pendingRounded === 0 && account.collateral"><small> +{{account.collateralRounded}}</small></span> {{poolConfig.ticker}}</td>
-    <td class="no-wrap">{{getFormattedCapacity(account.ec)}} <small>({{getEcShare(account)}} %)</small></td>
+    <td class="no-wrap">{{account.pendingRounded}}<span *ngIf="account.pendingRounded === 0 && account.collateral"><span style="font-size: 12.8px"> +{{account.collateralRounded}}</span></span> {{poolConfig.ticker}}</td>
+    <td class="no-wrap">{{getFormattedCapacity(account.ec)}} <span style="font-size: 12.8px">({{getEcShare(account)}} %)</span></td>
   </tr>
   </tbody>
 </table>
