Add support for difficulty updates as well as fixed difficulty

--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -196,6 +196,11 @@
                       <button class="btn btn-outline-light" (click)="updateMinimumPayout()">{{snippetService.getSnippet('my-farmer-component.manage-account-card.action.update-minimum-payout')}}</button>
                     </div>
                   </div>
+                  <div class="p-1 row">
+                    <div class="col-12">
+                      <button class="btn btn-outline-light" (click)="updateDifficulty()">Update difficulty</button>
+                    </div>
+                  </div>
                   <div class="p-1 row" *ngIf="canLeavePool">
                     <div class="col-12">
                       <button class="btn btn-outline-light" (click)="leavePool()">{{snippetService.getSnippet('my-farmer-component.manage-account-card.action.leave-pool')}}</button>
@@ -261,3 +266,4 @@
 <app-update-name-modal></app-update-name-modal>
 <app-leave-pool-modal></app-leave-pool-modal>
 <app-update-minimum-payout-modal></app-update-minimum-payout-modal>
+<app-update-difficulty-modal></app-update-difficulty-modal>
