--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -144,7 +144,7 @@
                 <h5>Current Effort</h5>
                 <fa-icon
                   [icon]="faInfoCircle"
-                  ngbTooltip="The current effort shows the effort since the last won block based on your average effective capacity. The effort is given in percent, where 100% equals the your estimated time to win."
+                  ngbTooltip="The current effort shows the effort since the last won block based on your average effective capacity. The effort is given in percent, where 100% equals your estimated time to win."
                   placement="bottom"
                   class="header-info-icon"
                 ></fa-icon>
